[package]
name = "radix-gateway-sdk"
edition = "2021"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/borderline-labs/radix-gateway-sdk"

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
derive_more = { version = "1.0.0-beta.6", features = ["from"] }
futures = "0.3.25"
http = "0.2.12"
httpclient = "0.22.1"
lazy_static = "1.4.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"

[dev-dependencies]
tokio = { version = "1.18.2", features = ["full"] }
